BusOne/src/objects/Cycle_Plan_Target_vod__c.object
<CustomObject>
    <description>The Cycle Plan Target is an Account that is included in a Cycle Plan.</description>
    <fields>
        <fullName>Actual_Calls_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>number of calls the user has made to date against his/her targeted accounts (populated automatically)</description>
        <label>Actual Calls</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attainment_vod__c</fullName>
        <formula>IF(Planned_Calls_vod__c &gt; 0,  Actual_Calls_vod__c  /  Planned_Calls_vod__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attainment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cycle_Plan_Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account that is a target for this Cycle Plan.</description>
        <label>Target</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cycle Plan Targets</relationshipLabel>
        <relationshipName>Cycle_Plan_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cycle_Plan_vod__c</fullName>
        <description>The Cycle Plan of which this account is part of.</description>
        <label>Cycle Plan</label>
        <referenceTo>Cycle_Plan_vod__c</referenceTo>
        <relationshipLabel>Cycle Plan Targets</relationshipLabel>
        <relationshipName>Cycle_Plan_Targets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Auto-populates External ID with the concatenation of &lt;Cycle_Plan_vod__c&gt; + 2 underscore characters + &lt;Cycle_Plan_Account_vod__c&gt;</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Original_Planned_Calls_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>number of calls the user was supposed to make according to the original Cycle Plan, before any updates were made by the user</description>
        <label>Original Planned Calls</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Calls_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>number of calls the user is supposed to make during the Cycle Plan’s time period</description>
        <label>Planned Calls</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Schedule_vod__c</fullName>
        <description>Count of Remaining Scheduled Calls</description>
        <formula>If(Planned_Calls_vod__c  -  Scheduled_Calls_vod__c -  Actual_Calls_vod__c &gt; 0, Planned_Calls_vod__c  -  Scheduled_Calls_vod__c -  Actual_Calls_vod__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Schedule</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_vod__c</fullName>
        <description>The remaining number of calls the user must complete in the Cycle Plan period to achieve their planned call objective for the targeted account.  Default value is 0.</description>
        <formula>IF(AND(ISBLANK(Planned_Calls_vod__c),ISBLANK(Actual_Calls_vod__c)),0
                  ,IF(ISBLANK(Actual_Calls_vod__c) ,Planned_Calls_vod__c 
                      , IF(ISBLANK(Planned_Calls_vod__c ),0
                            , IF((Planned_Calls_vod__c  -Actual_Calls_vod__c )&gt;=0,Planned_Calls_vod__c  -Actual_Calls_vod__c ,0)
                        )
                    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scheduled_Calls_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>It holds the number of calls scheduled by the user against the Cycle Plan Target.</description>
        <label>Scheduled Calls</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Actual_Calls_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>number of calls the team has made to date against his/her targeted accounts</description>
        <label>Actual Total Calls</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Attainment_vod__c</fullName>
        <formula>IF(Total_Planned_Calls_vod__c&gt;0, Total_Actual_Calls_vod__c/Total_Planned_Calls_vod__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Attainment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Planned_Calls_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>number of calls the team is supposed to make during the Cycle Plan’s time period</description>
        <label>Planned Total Calls</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Remaining_Schedule_vod__c</fullName>
        <description>Total Count of Remaining Scheduled calls</description>
        <formula>if (Total_Planned_Calls_vod__c -  Total_Scheduled_Calls_vod__c  -  Total_Actual_Calls_vod__c &gt; 0, Total_Planned_Calls_vod__c -  Total_Scheduled_Calls_vod__c  -  Total_Actual_Calls_vod__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Remaining Schedule</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Remaining_vod__c</fullName>
        <description>The remaining number of calls the team must complete in the Cycle Plan period to achieve their planned call objective for the targeted account.  Default value is 0.</description>
        <formula>IF(AND(ISBLANK(Total_Planned_Calls_vod__c ),ISBLANK(Total_Actual_Calls_vod__c)),0
                  ,IF(ISBLANK(Total_Actual_Calls_vod__c) ,Total_Planned_Calls_vod__c 
                      , IF(ISBLANK(Total_Planned_Calls_vod__c ),0
                            , IF((Total_Planned_Calls_vod__c -Total_Actual_Calls_vod__c)&gt;=0,
                                     Total_Planned_Calls_vod__c -Total_Actual_Calls_vod__c,
                                     0)
                        )
                    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Scheduled_Calls_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>It holds the number of calls scheduled against the Cycle Plan Target by the team of representatives calling on that account.</description>
        <label>Scheduled Total Calls</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zvod_Display_Product_Details_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If placed on the page layout , then the product detail columns will be displayed in the target list.</description>
        <label>zvod Display Product Details</label>
        <type>Checkbox</type>
    </fields>
    <label>Cycle Plan Target</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CPT-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cycle Plan Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PlannedCallsLessThan0</fullName>
        <active>true</active>
        <description>Planned Calls can not be less than 0.</description>
        <errorConditionFormula>Planned_Calls_vod__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Planned_Calls_vod__c</errorDisplayField>
        <errorMessage>Planned Calls can not be less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Trarget_vod</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Cycle_Plan_Account_vod__c ) = true</errorConditionFormula>
        <errorMessage>Please specify a Target Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TotalPlannedCallsLessThan0</fullName>
        <active>true</active>
        <description>Total Planned Calls can not be less than 0.</description>
        <errorConditionFormula>Total_Planned_Calls_vod__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Total_Planned_Calls_vod__c</errorDisplayField>
        <errorMessage>Total Planned Calls can not be less than 0.</errorMessage>
    </validationRules>
</CustomObject>